[gd_scene load_steps=9 format=3 uid="uid://bflxqrjtbsynx"]

[ext_resource type="Script" path="res://scenes/king/king.gd" id="1_8ogeh"]
[ext_resource type="VideoStream" path="res://scenes/king/king.ogv" id="2_qighi"]
[ext_resource type="AudioStream" uid="uid://dkp1x68kkgrvc" path="res://scenes/king/beautiful-church-chorus-175359.mp3" id="4_tomp4"]
[ext_resource type="PackedScene" uid="uid://cdoq6xtniibw8" path="res://scenes/gui_remaster/gui_remaster.tscn" id="4_xhtv6"]
[ext_resource type="PackedScene" uid="uid://cwr2ewdghvrdv" path="res://scenes/gui_original/gui_original.tscn" id="6_0ppwl"]
[ext_resource type="Texture2D" uid="uid://bkuc1oibbynbc" path="res://scenes/king/king.png" id="7_y4sd3"]
[ext_resource type="PackedScene" uid="uid://7hysib3wulxp" path="res://scenes/xx_settings/xx_settings.tscn" id="9_tff3y"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_jux55"]
file = "res://scenes/king/knight.ogv"

[node name="king" type="Node2D"]
script = ExtResource("1_8ogeh")

[node name="Remaster" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Remaster"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 176.0
offset_right = 1744.0
offset_bottom = 824.0

[node name="VideoStreamPlayerKing" type="VideoStreamPlayer" parent="Remaster/Control"]
layout_mode = 0
offset_left = -64.0
offset_right = 1576.0
offset_bottom = 816.0
stream = ExtResource("2_qighi")
autoplay = true
expand = true
loop = true

[node name="VideoStreamPlayerKnight" type="VideoStreamPlayer" parent="Remaster/Control"]
layout_mode = 0
offset_left = -64.0
offset_right = 1576.0
offset_bottom = 816.0
stream = SubResource("VideoStreamTheora_jux55")
autoplay = true
expand = true
loop = true

[node name="gui_remaster" parent="Remaster" instance=ExtResource("4_xhtv6")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Remaster"]
stream = ExtResource("4_tomp4")
autoplay = true

[node name="Original" type="Node2D" parent="."]

[node name="gui_original" parent="Original" instance=ExtResource("6_0ppwl")]

[node name="Background" type="Sprite2D" parent="Original"]
position = Vector2(943, 475)
scale = Vector2(2.475, 2.698)
texture = ExtResource("7_y4sd3")

[node name="xx_settings" parent="." instance=ExtResource("9_tff3y")]
visible = false
